--- a/web_frontend/src/tailwind.css
+++ b/web_frontend/src/tailwind.css
@@ -39,6 +39,31 @@ https://github.com/plausible/analytics/blob/7d37208d52c2331a5ba22df21c8179bb3313
   @apply bg-green-500;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
+.table-fixed {
+  table-layout: fixed;
+  width: 100%;
+}
+
+.table-fixed th,
+.table-fixed td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.table-fixed th {
+  height: 5vh;
+}
+
+.table-fixed td {
+  height: 5vh;
+}
+
+
 
 @keyframes pulse-ring {
   0% {
